--- a/src/Pages/PrivateCabinet/Components/WorkElements/WorkLinesPreview/WorkLinesPreview.module.sass
+++ b/src/Pages/PrivateCabinet/Components/WorkElements/WorkLinesPreview/WorkLinesPreview.module.sass
@@ -1,7 +1,7 @@
 .workLinesPreviewWrap
   display: flex
   width: 100%
-  height: 100%
+  height: calc(100% - 90px - 132px)
   max-height: max-content
   overflow: hidden
   box-sizing: border-box
@@ -11,22 +11,33 @@
     display: flex
     align-items: center
     flex-direction: column
-    min-width: 350px
-    max-width: 350px
+    min-width: 308px
+    width: 308px
     overflow-x: hidden
     overflow-y: scroll
     height: 100%
     border-right: 1px solid lightgrey
+    &::-webkit-scrollbar-track
+      background: #0A3AAB
+    &::-webkit-scrollbar-track
+      -webkit-box-shadow: none
+      background-color: #F5F5F5
+    &::-webkit-scrollbar
+      width: 3px
+      background-color: #FFFFFF
+    &::-webkit-scrollbar-thumb
+      background-color: #4086F1
     .bottomLine
       grid-column: 1 / -1
       width: 100%
       position: relative
       
   .previewFileWrap
-    box-sizing: border-box
-    padding: 50px 0
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: center
     flex-grow: 1
-    overflow: auto
     height: 100%
     &::-webkit-scrollbar-track
       background: #0A3AAB
@@ -99,9 +110,10 @@
       width: 100%
       margin: 0 0 10px 0
       .itemName
+        font-size: 14px
         display: flex
         justify-content: flex-end
-        width: 45%
+        width: 48%
         margin: 0 20px 0 0
         font-family: "SF Pro Light", sans-serif
       .optionItem:hover
@@ -134,3 +146,17 @@
     position: relative
     width: 120px
     height: 140px
+
+
+  
+
+@media (max-width: 1450px)
+  .workLinesPreviewWrap
+    
+    .previewFileWrap
+      display: block
+      box-sizing: border-box
+      padding: 50px 0
+      flex-grow: 1
+      height: 100%
+      overflow-y: auto  
